**Modifications on location of modal, login margin size

--- a/src/app/feature-modules/register/register.component.html
+++ b/src/app/feature-modules/register/register.component.html
@@ -1,4 +1,5 @@
-<div class="home container bcg register" style="background-image: url('./assets/images/background3.jpg')">
+<div class="home container bcg register" >
+  <!--style="background-image: url('./assets/images/background3.jpg')"-->
   <div class="row hcc ">
     <div class="col-12 ">
       <div class="head" routerLink="../home">
@@ -9,7 +10,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12">
+    <div class="col-12" style="margin-top: 25px">
       <div class="card">
         <div class="card-body">
           <div class="row">
