--- a/src/app/feature-modules/user/home-con/home-page/mag-container/mag-container.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/mag-container/mag-container.component.html
@@ -11,9 +11,10 @@
 <div class="m-t-con">
   <h1>{{mag?.title}}</h1>
 
-  <div class="h-ic bcimg" [ngStyle]="{'background-image':'url( data:image/jpeg;base64,' + mag?.featuredImage + ')'}">
+  <!--<div class="h-ic bcimg" [ngStyle]="{'background-image':'url( data:image/jpeg;base64,' + mag?.featuredImage + ')'}">-->
 
-  </div>
+  <!--</div>-->
+
   <hr>
 </div>
 
