**Modified share icon rotation and added space between top menu

--- a/src/scss/_hahu.scss
+++ b/src/scss/_hahu.scss
@@ -602,6 +602,7 @@ $ppw: 36px;
     font-size: 29px;
     display: inline-block;
     padding: 0 2px;
+    margin-right: 6px;
     &.active {
       color: #fff;
       text-decoration: underline;
